intro to sys prog des
complete the valid board but will debug

--- a/Coursera/Introduction to Systematic Program Design/Peer Assessments/Project 2/queens.1
+++ b/Coursera/Introduction to Systematic Program Design/Peer Assessments/Project 2/queens.1
@@ -2043,7 +2043,7 @@
 0 -1 -1 0 1 #"\0"
 0 75 10 #"Monospace\0"
 0.0 22 90 -1 90 -1 3 -1 0 1 0 1 0 0 0.0 0.0 0.0 0.0 0.0 0.0 0 0 0 255
-255 255 1 -1           0 3297 0 4 3 85
+255 255 1 -1           0 3349 0 4 3 85
 (
  #";; The first three lines of this file were inserted by DrRacket. The"
  #"y record metadata"
@@ -6221,6 +6221,58 @@
 0 0 15 3 6 #"define"
 0 0 23 3 1 #" "
 0 0 14 3 17 #"get-column-values"
+0 0 23 29 1 #"\n"
+0 0 23 3 13 #"            ("
+0 0 15 3 5 #"local"
+0 0 23 3 3 #" [("
+0 0 15 3 6 #"define"
+0 0 23 3 1 #" "
+0 0 14 3 8 #"sentinel"
+0 0 23 3 2 #" ("
+0 0 14 3 8 #"quotient"
+0 0 23 3 1 #" "
+0 0 14 3 3 #"pos"
+0 0 23 3 1 #" "
+0 0 20 3 1 #"8"
+0 0 23 3 2 #"))"
+0 0 23 29 1 #"\n"
+0 0 23 3 21 #"                    ("
+0 0 15 3 6 #"define"
+0 0 23 3 2 #" ("
+0 0 14 3 6 #"rec-fn"
+0 0 23 3 1 #" "
+0 0 14 3 3 #"row"
+0 0 23 3 1 #" "
+0 0 14 3 2 #"bd"
+0 0 23 3 1 #")"
+0 0 23 29 1 #"\n"
+0 0 23 3 23 #"                      ("
+0 0 14 3 2 #"if"
+0 0 23 3 2 #" ("
+0 0 14 3 1 #"="
+0 0 23 3 1 #" "
+0 0 14 3 3 #"row"
+0 0 23 3 1 #" "
+0 0 14 3 8 #"sentinel"
+0 0 23 3 1 #")"
+0 0 23 29 1 #"\n"
+0 0 23 3 27 #"                          ("
+0 0 14 3 5 #"first"
+0 0 23 3 1 #" "
+0 0 14 3 2 #"bd"
+0 0 23 3 1 #")"
+0 0 23 29 1 #"\n"
+0 0 23 3 27 #"                          ("
+0 0 14 3 6 #"rec-fn"
+0 0 23 3 2 #" ("
+0 0 14 3 4 #"add1"
+0 0 23 3 1 #" "
+0 0 14 3 3 #"row"
+0 0 23 3 3 #") ("
+0 0 14 3 4 #"rest"
+0 0 23 3 1 #" "
+0 0 14 3 2 #"bd"
+0 0 23 3 5 #"))))]"
 0 0 23 29 1 #"\n"
 0 0 23 3 12 #"            "
 0 0 23 29 1 #"\n"
